# makerelease

./: .gitignore  .gitmodules  LICENSE  README.md  gui.py  main.py  makerelease.py  pyproject.toml  requirements.txt  ruff.toml  tag.py
.github/workflows/: build.yml
config/: keys.example.json  screenshots.txt  template.txt  template_example.txt  trackers.txt
config_example/: keys.json  template.jinja  template.txt  trackers.txt
data/: trackers.txt  trackers_spaziati.txt
src/: app.py  bitrateviewer.py  constants.py  countries_ISO_3166-1_alpha2.json  file_analysis.py  file_description.py  file_torrenting.py  images.py  makerelease.py  metadata.py  post.py  tag.py  torrent.py  update_check.py  utils.py
src/api/: imgbb.py  imgbly.py  imgur.py  themoviedb.py
src/makerelease/: __init__.py  app.py  bitrateviewer.py  constants.py  countries_ISO_3166-1_alpha2.json  images.py  metadata.py  post.py  torrent.py  utils.py
src/makerelease/api/: imgur.py  themoviedb.py
tests/: test_makerelease.py
