[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makerelease"
version = "0.1.0"
authors = [
    { name = "Rick Sanchez" },
    { name = "Norman" },
]
description = "script per velocizzare la pubblicazione di film e serie tv sui forum P2P italiani"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4~=4.12.3",
    "customtkinter~=5.2.2",
    "ffmpeg_python~=0.2.0",
    "matplotlib~=3.8.3",
    "parse-torrent-title~=2.8.1",
    "pillow~=10.3.0",
    "pymediainfo~=6.1.0",
    "Requests~=2.31.0",
    "scipy~=1.12.0",
    "torf~=4.2.4",
    "Jinja2~=3.1.3",
]

[project.urls]
Repository = "https://github.com/c137ricksanchez/makerelease"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    #"setuptools",
    #"wheel",
    #"twine",
    #"build",
]

[tool.ruff]

# Set the maximum line length to 120
line-length = 120
indent-width = 4

# Support Python 3.9+
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]